# sentinel-eoir

./: README.md
gui_bridge/: README.md  package.xml
gui_bridge/launch/: gui_bridge.launch.py
gui_bridge/src/: config.hpp
install/: local_setup.sh
install/include/sentinel_interfaces/sentinel_interfaces/msg/: detection.h  detection.hpp  detection2_d.hpp  detection2_d_array.h  motor_command.h  motor_status.h  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  tracked_detection2_d.h  tracked_detection2_d_array.h  video_rx_status.h
install/include/sentinel_interfaces/sentinel_interfaces/msg/detail/: detection2_d__builder.hpp  detection2_d__description.c  detection2_d__functions.c  detection2_d__rosidl_typesupport_fastrtps_c.h  detection2_d__rosidl_typesupport_introspection_cpp.hpp  detection2_d__struct.h  detection2_d__type_support.c  detection2_d__type_support.cpp  detection2_d__type_support.h  detection2_d__type_support.hpp  detection2_d_array__functions.c  detection2_d_array__functions.h  detection2_d_array__rosidl_typesupport_fastrtps_c.h  detection2_d_array__rosidl_typesupport_fastrtps_cpp.hpp  detection2_d_array__rosidl_typesupport_introspection_c.h  detection2_d_array__type_support.c  detection2_d_array__type_support.cpp  detection2_d_array__type_support.h  detection2_d_array__type_support.hpp  detection__description.c  detection__functions.h  detection__struct.h  detection__type_support.cpp  frame_info__functions.c  frame_info__functions.h  frame_info__rosidl_typesupport_fastrtps_c.h  frame_info__rosidl_typesupport_fastrtps_cpp.hpp  frame_info__rosidl_typesupport_introspection_c.h  frame_info__rosidl_typesupport_introspection_cpp.hpp  frame_info__type_support.c  frame_info__type_support.hpp  frame_size__builder.hpp  frame_size__description.c  frame_size__functions.c  frame_size__rosidl_typesupport_fastrtps_c.h  frame_size__rosidl_typesupport_fastrtps_cpp.hpp  frame_size__rosidl_typesupport_introspection_cpp.hpp  frame_size__struct.hpp  frame_size__type_support.c  frame_size__type_support.cpp  (+48 more)
install/include/sentinel_interfaces/sentinel_interfaces/srv/: set_bool_flag.h  set_threshold.hpp
install/include/sentinel_interfaces/sentinel_interfaces/srv/detail/: set_bool_flag__builder.hpp  set_bool_flag__description.c  set_bool_flag__functions.c  set_bool_flag__functions.h  set_bool_flag__rosidl_typesupport_fastrtps_c.h  set_bool_flag__rosidl_typesupport_introspection_cpp.hpp  set_bool_flag__type_support.c  set_bool_flag__type_support.h  set_bool_flag__type_support.hpp  set_threshold__builder.hpp  set_threshold__description.c  set_threshold__functions.c  set_threshold__rosidl_typesupport_fastrtps_cpp.hpp  set_threshold__struct.h  set_threshold__traits.hpp  set_threshold__type_support.c  set_threshold__type_support.cpp  set_threshold__type_support.h
install/lib/sentinel_motor/: motor_feedback_node
install/share/ament_index/resource_index/parent_prefix_path/: sentinel_interfaces
install/share/sentinel_interfaces/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/share/sentinel_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  export_sentinel_interfaces__rosidl_generator_cExport.cmake  export_sentinel_interfaces__rosidl_generator_cppExport.cmake  export_sentinel_interfaces__rosidl_generator_pyExport-noconfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  sentinel_interfacesConfig.cmake  sentinel_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake
install/share/sentinel_interfaces/hook/: pkg_config_path_multiarch.ps1
install/share/sentinel_interfaces/msg/: Detection.json  Detection2D.idl  Detection2D.msg  Detection2DArray.msg  FrameInfo.idl  FrameInfo.json  MotorAngle.idl  MotorAngle.json  MotorAngle.msg  MotorCommand.idl  TrackedDetection2DArray.json  VideoRxStatus.idl  YoloStatus.json
install/share/sentinel_interfaces/srv/: SetBoolFlag.idl  SetBoolFlag.json  SetThreshold.idl  SetThreshold.json
install/share/sentinel_motor/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/share/sentinel_motor/cmake/: sentinel_motorConfig.cmake
log/: latest_build
motor/: README.md
motor/Validation/: bag_to_csv.py  detection_result.csv  human_motor.csv  tracking_test2_0.db3
motor/Validation/human_tracking_test/: human_tracking_test_0.db3  metadata.yaml
motor/sentinel_interfaces/: package.xml
motor/sentinel_interfaces/msg/: FrameInfo.msg  FrameSize.msg  MotorCommand.msg  MotorStatus.msg  TrackedDetection2DArray.msg  YoloStatus.msg
motor/sentinel_interfaces/srv/: SetThreshold.srv
motor/sentinel_motor/: README.md  package.xml
motor/sentinel_motor/include/sentinel_motor/: PacketDef.hpp  PacketDef_backup.hpp  UdpTransport.hpp
motor/sentinel_motor/src/: UdpTransport.cpp  motor_feedback_node.cpp  tracking_control_node.cpp
src/: README.md  recording_video_server.py
src/Validation/: human_detection.csv  metadata.yaml  motor_result.csv
src/gui_bridge_pkg/: CMakeLists.txt
src/gui_bridge_pkg/docs/: Detection packet format.md
src/gui_bridge_pkg/src/: gui_bridge_node.cpp  mode_manager_node.cpp
src/sentinel_interfaces/: CMakeLists.txt
src/sentinel_interfaces/msg/: MotorCommand.msg  TrackedDetection2D.msg  VLMDetection2D.msg  VLMDetection2DArray.msg  VideoRxStatus.msg
src/sentinel_motor/: CMakeLists.txt
src/sentinel_motor/config/: params.yaml
src/sentinel_motor/launch/: pan_tilt_control.launch.py
src/sentinel_motor/src/: pan_tilt_control_node.cpp
