<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gui_bridge_pkg</name>
  <version>0.1.0</version>
  <description>GUI UDP bridge — image/detection/motor/VLM relay between ROS2 and GUI</description>
  <maintainer email="dev@lig.co.kr">lig</maintainer>
  <license>proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <!-- <depend>sensor_msgs</depend> -->
  <depend>std_msgs</depend>
  <!-- <depend>cv_bridge</depend> -->
  <depend>sentinel_interfaces</depend>

  <build_depend>libboost-system-dev</build_depend>
  <build_depend>libboost-thread-dev</build_depend>
  <exec_depend>libboost-system1.83.0</exec_depend>
  <exec_depend>libboost-thread1.83.0</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
